FEATURE018-added permissions