@@ -2,17 +2,18 @@ package com.example.tasksmanagement.user;
 
 import lombok.AllArgsConstructor;
 import lombok.Getter;
-import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
-import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 @AllArgsConstructor
+@Getter
 public enum Role {
-    USER(Collections.emptySet()),
+    USER(Set.of(
+            Permission.USER_READ,
+            Permission.USER_UPDATE
+    )),
     EDITOR(Set.of(
             Permission.EDITOR_READ,
             Permission.EDITOR_UPDATE,
@@ -30,7 +31,6 @@ public enum Role {
             Permission.ADMIN_READ
     ));
 
-    @Getter
     private final Set<Permission> permissions;
 
     public Set<SimpleGrantedAuthority> getAuthorities() {
